--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -22,6 +22,23 @@ jobs:
     - name: Push Docker image to Docker Hub
       run: docker push ${{ secrets.DOCKER_HUB_USER_NAME }}/project:latest
 
+    - name: Create directory on Contabo server if missing
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.CONTABO_HOST }}
+        username: ${{ secrets.CONTABO_USER }}
+        password: ${{ secrets.CONTABO_PASSWORD }}
+        script: mkdir -p /home/${{ secrets.CONTABO_USER }}/project
+
+    - name: Upload deployment.yaml to Contabo server
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        host: ${{ secrets.CONTABO_HOST }}
+        username: ${{ secrets.CONTABO_USER }}
+        password: ${{ secrets.CONTABO_PASSWORD }}
+        source: "deployment.yaml"
+        target: "/home/${{ secrets.CONTABO_USER }}/project/"
+
     - name: Deploy to Minikube on Contabo server
       uses: appleboy/ssh-action@v1.0.0
       with:
@@ -29,12 +46,9 @@ jobs:
         username: ${{ secrets.CONTABO_USER }}
         password: ${{ secrets.CONTABO_PASSWORD }}
         script: |
-          echo "Pulling latest Docker image"
+          echo "Pulling latest image from Docker Hub"
           docker pull ${{ secrets.DOCKER_HUB_USER_NAME }}/project:latest
 
-          echo "Setting Minikube docker-env"
-          eval $(minikube -p minikube docker-env)
-
-          echo "Creating Kubernetes deployment"
+          echo "Deploying to Minikube"
           kubectl delete deployment project-deploy --ignore-not-found
-          kubectl apply -f /home/newuser/project/deployment.yaml
+          kubectl apply -f /home/${{ secrets.CONTABO_USER }}/project/deployment.yaml
