--- a/deployment.yaml
+++ b/deployment.yaml
@@ -13,11 +13,10 @@ spec:
         app: project
     spec:
       containers:
-      - name: project-container
-        image: warrparray/project:latest
+      - name: project
+        image: your-dockerhub-username/project:latest
         ports:
-        - containerPort: 80
-
+        - containerPort: 8081
 ---
 apiVersion: v1
 kind: Service
@@ -28,7 +27,7 @@ spec:
     app: project
   type: NodePort
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
-    nodePort: 30080
+    - port: 80
+      targetPort: 8081
+      nodePort: 30080
+
