--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: project
-        image: your-dockerhub-username/project:latest
+        image: warrparray/project:latest
         ports:
         - containerPort: 8081
 ---
